--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <span class="author-block">Fig. 2:  RISpaNet block structure. RISpaNet consists of three modules: 
                 the rotation-invariant property generation module (RIPGM), the multi-scale pooling module (MSPM) and the hybrid encoder.
                  The RIPGM is used to generate the rotational-invariant tetrahedron properties (RITP). The multi-scale pooling module is applied 
-                 to process the RITP to obtain multi-scale features. 、
+                 to process the RITP to obtain multi-scale features. 
                 The hybrid encoder is designed to extract the integrated rotational-invariant features. </span>
             </div>
           </div>
